# AppiumAutomation

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: app_config.json  app_config_android.json  app_config_ios.json
src/pages/: __init__.py  base_page.py  home_page.py  login_page.py
src/tests/: base_test.py  conftest.py  test_login.py
src/utils/: __init__.py  appium_wrapper.py  config_loader.py  test_data_loader.py  wait_utils.py
test_data/: login_test_data.json
